# MySTM32

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
toolchain/: arm-none-eabi-gcc_toolchain.cmake
